--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="container"></div>
 
-        <script src="js/game-of-life-bg.js"></script>
+        <script src="js/game-of-life.js"></script>
         <script src="js/demo.js"></script>
     </body>
 </html>
